k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80

          - path: /orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 80

          - path: /inventory/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 80
